Prevent zooming on mobile devices. - Re-enabled ability to resize editor height

--- a/app/css/app.css
+++ b/app/css/app.css
@@ -48,7 +48,7 @@ html, body {
 .talc-app #talc-editor,
 .talc-app #talc-results {
   font-family: 'Ubuntu Mono', monospace;
-  font-size: 14px;
+  font-size: 16px;
   line-height: 1.3;
   word-wrap: break-word;
 }
@@ -64,7 +64,6 @@ html, body {
   height: 480px;
   border: none;
   background-color: white;
-  resize: none;
   z-index: 100;
 }
 .talc-app #talc-editor:focus {
